# slimage

./: .cproject  .project  CMakeLists.txt  README.md  slimage.sublime-project
examples/: CMakeLists.txt  foo.cpp  lena_opencv.cpp  lena_qt.cpp  opencv_to_slimage.cpp  qt.cpp  slimage_to_opencv.cpp  view.cpp
include/slimage/: algorithm.hpp  anonymous.hpp  error.hpp  gui.hpp  image.hpp  io.hpp  io_1ui16.hpp  iterator.hpp  opencv.hpp  pixel.hpp  qt.hpp  types.hpp
src/Slimage/: Convert.hpp  Gui.hpp  IO.hpp  Iterator.hpp  Mipmap.hpp  Paint.hpp  Parallel.h  Pixel.hpp  Qt.hpp  Slimage.hpp
src/Slimage/detail/: OpenCv.hpp  Qt.hpp
src/Slimage/impl/: io.hpp
